[tool.poetry]
name = "pplab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
sqlalchemy = "^1.4.45"
psycopg2 = "^2.9.5"
marshmallow = "^3.19.0"
flask-bcrypt = "^1.0.1"
flask-httpauth = "^4.7.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
